# NetDiag

./: CMakeLists.txt  CMakeLists_Advanced.txt  README.md
gui/: MainWindow.cpp  MainWindow.h  main_gui.cpp
python_suite/: 1_NetworkDiagnostic.py  2_PerformanceAnalyzer.py  3_TrafficAnalyzer.py  4_SecurityMonitor.py  DashboardWeb.py  README_PYTHON.md  WebSocketAPI.py  build_exe.py  requirements.txt
src/: DNSTest.cpp  DNSTest.h  DataExporter.cpp  DataExporter.h  MonitoringEngine.cpp  MonitoringEngine.h  NetworkInfo.cpp  NetworkInfo.h  PacketCapture.cpp  PacketCapture.h  PerformanceAnalyzer.cpp  PerformanceAnalyzer.h  PingTest.cpp  PingTest.h  PortScanTest.cpp  PortScanTest.h  SpeedTest.cpp  SpeedTest.h  TracerouteTest.cpp  TracerouteTest.h  Utils.cpp  Utils.h  main.cpp  main_cli.cpp
